# cppPhysicsEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: collider.h  geometry.h  line.h  physObj.h  physSpace.h  vector.h
src/: collider.cpp  line.cpp  physObj.cpp  vector.cpp
tests/: CMakeLists.txt  closestPoint.cpp  insidePoints.cpp  rotationTranslationCollider.cpp  test_colliders.cpp  test_collisions.cpp  test_lines.cpp
tests/oldTests/: closestPoint.cpp  insidePoints.cpp  rotationTranslationCollider.cpp
